[package]
name = "bridge-manager"
version = "0.2.0"
description = "Stafi bridge on solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge_manager"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", default-features = false, features = [
    "token",
    "spl-token",
] }
mint-manager = { path = "../mint-manager", features = ["cpi"] }
