[package]
name = "mint-manager"
version = "0.1.0"
description = "StaFi token mint manager"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mint_manager_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", default-features = false, features = [
    "mint",
    "spl-token",
    "token",
] }
