[package]
name = "rsol"
version = "0.1.0"
description = "StaFi rSOL solution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rsol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = { version = "0.28.0", default-features = false, features = [
    "stake",
    "mint",
    "spl-token",
    "token",
] }
